templates/ConstraintTemplate.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequirehpa
spec:
  crd:
    spec:
      names:
        kind: K8sRequireHPA
      validation:
        openAPIV3Schema:
          properties:
            message:
              type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequirehpa

        violation[{"msg": message}] {
          input.review.kind.kind == "Deployment" 
          not hpa_exists
          message := "There is no HPA present for higher environment usage, please consider adding one"
        }

        violation[{"msg": message}] {
          input.review.kind.kind == "StatefulSet"
          not hpa_exists
          message := "There is no HPA present for higher environment usage, please consider adding one"
        }

        violation[{"msg": message}] {
          hpa_exists
          min_replicas == 1
          message := "Given the application is set to scale, for higher environments you must set HPA minimum replica to greater than 1"
        }

        hpa_exists {
          hpas := {hpa | hpa := input.review.objects.hpa}
          count(hpas) > 0
        }

        min_replicas := hpa.spec.minReplicas {
          hpa := input.review.objects.hpa[_]
        }
